--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -32,7 +32,10 @@ div .statustag{font-size: 25px;text-align: center;color:#EF4444 !important;}
 .crowdalert{text-align: center;letter-spacing: 1.5px;margin-left:auto;}
 #crowdpage{font-size: 40px;padding-top: 15px;padding-bottom: 5px;}
 #crowdtime{font-size: 35px;}
-.buttonppl{display:inline-block; height:50px;width: 50px;margin:0 10px;}
+.buttonppl{display:inline-block; height:50px;/*width: 50px;*/margin:0 10px;background-color:#F0DE62;-moz-border-radius: 12px; /* FF1+ */
+	-webkit-border-radius: 12px; /* Saf3-4 */
+  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */}
+div a{display:block;margin: 0 auto;}
 #confirmation{font-size: 20px;color:#333333;}
 </style>
 <script type="text/javascript">
