--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -85,9 +85,9 @@ $(document).ready(function(){
 	else if ("{{crowd.status}}" == "low")
 		$("div #crowdstatus").html("Low: is this a zombie apocalypse or where is everyone?");
 
-	$('#1 img').attr('src','/images/heart.png');
-	$('#2 img').attr('src','/images/heart.png');
-	$('#3 img').attr('src','/images/heart.png');
+	$('#1 img').attr('src','/images/gheart.png');
+	$('#2 img').attr('src','/images/gheart.png');
+	$('#3 img').attr('src','/images/gheart.png');
 	console.log({{crowd.hottie}});
 	switch('{{crowd.hottie}}'){
 		case '3':
