--- a/views/suggestact2.handlebars
+++ b/views/suggestact2.handlebars
@@ -8,6 +8,7 @@
 		</div></a>
 		{{/each}}
 	</div>
+	<div id="return"><a href="#">Return to Activity</a></div>
 </div>
 
 <!-- 
@@ -87,8 +88,11 @@ margin-right:auto;
 <script>
 var beachloc = "{{name}}";
 
+function loadSA(){$(".sbcontent").load("/activity/"+beachloc,errorResponse);}
+
 $(document).ready(function(){
 	$(".arrow a").click(function() {$(".sbcontent").load("/activity/"+beachloc,errorResponse); });
+	$("#return a").click(function() { loadSA(); });
 	{{#each activity}}
 	$("a[id=\"{{name}}\"]").click(function(){
 		ga("send", "event", "activity", "click");
