--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -82,7 +82,7 @@ $( document ).ready(function() {
 	loadWeather();
 	//$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() {loadMainContent("beachlist") });
-	$(".home a").click(function(){loadMainContent("beachlist") });
+	$(".home a").click(function(){ window.location.href = '/'; });
 	$("#surf a").click(function(){ loadSurf()});
 	$("#weather a").click(function(){loadWeather(); });
 	$("#activity a").click(function(){loadActivity(); });
