--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -68,6 +68,7 @@ clear:both;
 	position:relative;
 	width:100%;
 	z-index: 2;
+	min-height: 300px;
 	border-radius: 3px;
 }
 div .sbcontent{font-family:'Sintony'; }
