--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -3,7 +3,7 @@
 
 <div id="time"> 2:10PM </div>
 
-<div id="weatherIcon"> <img src="/images/sunclouds1.png" class="img-responsive icon"></div><div id="temp"> 70 </div> 
+<div id="weatherIcon"> <img src="/images/sun.png" class="img-responsive icon"></div><div id="temp"> 70 </div> 
  <div id="highlow"> High: <div id="temp_max"> </div>
     Low: <div id="temp_min"> </div>
  </div>
