--- a/views/suggestact2.handlebars
+++ b/views/suggestact2.handlebars
@@ -63,17 +63,25 @@ width:100%;
 	float:right;
 }
 #suggest{
+padding-top:10px;
+font-size: 30px;
+height: 40px; /* height for all three buttons on front page*/
+width:100%;
+background: none;
+margin-left:auto;
+margin-right:auto;
+}
+/*
+#suggest{
 padding-top:5px;
 font-size: 27px;
 font-color:#333333;
-height: 40px; /* height for all three buttons on front page*/
+height: 40px; /* height for all three buttons on front page
 width:170px;
 background: none;
 margin-left:auto;
 margin-right:auto;
-
-
-}
+}*/
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
