--- a/views/suggestact2.handlebars
+++ b/views/suggestact2.handlebars
@@ -26,34 +26,18 @@ a:active{color:#2a6496;}
  	font-size:25px;
  	text-align:center;
  	margin-left:auto;
- 	padding-right:50px;
+ 	/*padding-right:50px;*/
  	letter-spacing: 1.5px;
  }
  #pagetitle{
  	padding-top:5px;
- 	padding-bottom:15px;
+ 	/*padding-bottom:15px;*/
  	font-size:40px;
  	letter-spacing: 1.5px
  }
- #acticon{
- 	width: 60%;
- 	margin-left:auto;
-	margin-right:auto;
- }
-#bestact{
-	font-size:30px;
-	padding-bottom:5px;
-
-}
-#youcan{
-	font-size:25px;
-}
-#youcancontent{
-	font-size:20px;
-}
-.actlist{
-width:100%;
-}
+#youcan{font-size:25px;}
+#youcancontent{font-size:20px;}
+.actlist{width:100%;}
 #name{
 	width:50%;
 	float:left;
