--- a/public/css/surf.css
+++ b/public/css/surf.css
@@ -10,12 +10,11 @@
 	padding-top: 15px;
 }
 .height a:visited {color:#2a6496;}
-
 .height{
 	text-align: center;
 	font-size: 50px;
-	/*color: #ef4444 !important;
-	/*padding-top: 15px;
+	/*color: #ef4444 !important;*/
+	padding-top: 15px;
 	padding-bottom: 20px;
 	letter-spacing: 2px;
 	/*add font color*/
