--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -8,6 +8,7 @@
     Low: <div id="temp_min"> </div>
  </div>
 <div id="sunset"> Sunset: 6:02PM </div> 
+<div style="clear:both;"></div>
 </div>
 
 <script>
