--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -28,7 +28,6 @@
  	letter-spacing: 1.5px
  }
  #activityicon{
- 	/*height: 50%;*/
  	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
@@ -40,14 +39,8 @@
 #youcan{font-size:25px;}
 #youcancontent{font-size:20px;}
 .actlist{width:100%;}
-#name{
-	width:50%;
-	float:left;
-}
-#votes{
-	width:50%;
-	float:right;
-}
+#name{width:50%;float:left;}
+#votes{width:50%;float:right;}
 #suggest{
 padding-top:10px;
 font-size: 30px;
