--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -6,7 +6,7 @@
 	{{#each activity}}
 	<div id="activity"> 
 			<div id="name">{{name}}</div>
-			<div id="count">{{count}} Counts </div>
+			<div id="count">{{count}} Votes</div>
 		</div>
 		{{/each}}
 	</div>
