--- a/views/suggestact2.handlebars
+++ b/views/suggestact2.handlebars
@@ -4,7 +4,7 @@
 	{{#each activity}}
 	<a id="{{name}}" href="#" ><div id="activity">
 		<div id="name" >{{name}}</div>
-		<div id="count">{{count}} Counts</div>
+		<div id="count">{{count}} Votes</div>
 	</div></a>
 	{{/each}}
 </div>
