--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -66,7 +66,7 @@ $(document).ready(function(){
 	$("#1 a").click(function(){loadUpdateCrowd("/updatehottie/{{name}}/1");});
 	$("#2 a").click(function(){loadUpdateCrowd("/updatehottie/{{name}}/2");});
 	$("#3 a").click(function(){loadUpdateCrowd("/updatehottie/{{name}}/3");});
-
+	console.log();
 	$("div #lastupdate").html("<p> Last update: "+getLocalize(localize("{{crowd.lastupdate}}"))+"</p>");
 
 	//status for hottie
